force-app/main/default/objects/ZRH_MapaDeValores__mdt/ZRH_MapaDeValores__mdt.object-meta.xml
<CustomObject>
    <description>Este objeto permitirá almacenar la relación de los estados de un objeto y el rol y/o perfil</description>
    <label>Mapa de valores</label>
    <pluralLabel>Mapa de valores</pluralLabel>
</CustomObject>