force-app/main/default/objects/ZRH_MapaDeValores__mdt/fields/ZHR_Campo__c.field-meta.xml
<CustomField>
    <fullName>ZHR_Campo__c</fullName>
    <description>Campo al cual esta relacionado el registro.</description>
    <label>Campo</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>