force-app/main/default/objects/ZRH_MapaDeValores__mdt/fields/ZRH_Objeto__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Objeto__c</fullName>
    <description>Objeto al cual esta relacionado el registro</description>
    <label>Objeto</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>