force-app/main/default/objects/ZRH_MapaDeValores__mdt/fields/ZRH_Valor__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Valor__c</fullName>
    <description>Valor del campo almacenado en el registro</description>
    <label>Valor</label>
    <length>20</length>
    <type>Text</type>
</CustomField>