force-app/main/default/objects/ZRH_MapaDeValores__mdt/fields/ZRH_ValorAPI__c.field-meta.xml
<CustomField>
    <fullName>ZRH_ValorAPI__c</fullName>
    <description>Valor API del registro almacenado</description>
    <label>Valor API</label>
    <length>20</length>
    <type>Text</type>
</CustomField>